Fixup executor-api and shared modules to work with new api