@@ -37,7 +37,6 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Optional;
@@ -49,7 +48,7 @@ public class FileDatabaseTableWrapper implements DatabaseTableWrapper {
 
     public FileDatabaseTableWrapper(@NotNull String tableName) {
         this.database = DatabaseProvider.getDatabaseDriver().getDatabase(
-            Paths.get("reformcloud/.database").resolve(tableName).toFile(),
+            Path.of("reformcloud/.database").resolve(tableName).toFile(),
             SerializableJsonConfiguration::new,
             1
         );
