@@ -30,13 +30,12 @@ import systems.reformcloud.reformcloud2.shared.network.SimpleNetworkAddress;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.UUID;
 
 public class NodeConfig {
 
-    protected static final Path PATH = Paths.get(System.getProperty("systems.reformcloud.node-config-path", "reformcloud/config.json"));
+    protected static final Path PATH = Path.of(System.getProperty("systems.reformcloud.node-config-path", "reformcloud/config.json"));
 
     private final String name;
     private final UUID uniqueID;
